form.css.inc.php & ie7.css - removed ie7 specific styles for formtitle and formcontrol as it doesn't fix issue in ie8 when using doc mode ie7 form.obj.php - added a span to markup inside the formcontrol to fix odd spacing issue in ie7, also works in ie8 running doc mode ie7 style.php - added an ie8 class to fix odd button when in ie8 running ie7 document mode all changes for mantis bug 0005460

--- a/css/ie7.css
+++ b/css/ie7.css
@@ -4,6 +4,3 @@
 div.scrollTableContainer {
 	overflow-x: hidden;
 }
-
-.newform .formtitle { margin: 0 10px 0 0; }
-.newform .formcontrol { margin: 0; }
